# yolov4_tiny_tvm_inference

./: CMakeLists.txt  README.md  run_build.sh
include/: yolo_inference.h
python_utils/: compile_onnx_to_libso.py  requirements.txt  run_compiled_so_yolo.py  run_onnx_yolo.py  run_tvm_yolo.py  yolov4_postprocess.py
src/: test_yolo_detection.cpp  tvm_runtime_pack.cc  yolo_inference.cpp
